--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,22 +1,27 @@
-name: test
+name: Detect PUML File Changes
 
 on: [push]
 
 jobs:
-  get-changed-files:
+  check-puml:
     runs-on: ubuntu-latest
-    outputs:
-      changed_files: ${{ steps.changed-files.outputs.all_changed_files }}
-      any_changed: ${{ steps.changed-files.outputs.any_changed }}
+
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-      - name: Get changed files
-        uses: tj-actions/changed-files@v35.7.1
-        id: changed-files
-        with:
-          files: |
-            **/*.puml
-          files_separator: "\n"
-      - name: Output changed files
-        run: echo ${{ steps.changed-files.outputs.all_changed_files }}
+    - uses: actions/checkout@v2
+
+    - name: Get all changed PUML files
+      id: changed-puml-files
+      uses: tj-actions/changed-files@v44
+      with:
+        # Avoid using single or double quotes for multiline patterns
+        files: |
+          **/*.puml
+
+    - name: List all changed PUML files
+      if: steps.changed-puml-files.outputs.any_changed == 'true'
+      env:
+        ALL_CHANGED_FILES: ${{ steps.changed-puml-files.outputs.all_changed_files }}
+      run: |
+        for file in ${ALL_CHANGED_FILES}; do
+          echo "$file was changed"
+        done
